add authentication service

--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -1,13 +1,11 @@
 ---
-import MessageList from "~/components/message_list.tsx"
-import MessageForm from "~/components/message_form.tsx"
+import Top from "~/components/top.tsx"
 ---
 <html>
 <head>
   <meta charset="utf8" />
 </head>
 <body>
-  <MessageForm client:load />
-  <MessageList client:load />
+  <Top client:load />
 </body>
 </html>
