--- a/front/src/pages/index.astro
+++ b/front/src/pages/index.astro
@@ -5,7 +5,7 @@ import Top from "~/components/top.svelte"
 <head>
   <meta charset="utf8" />
 </head>
-<body>
+<body class="bg-gray-800">
   <Top client:load />
 </body>
 </html>
